# fb-clone-django-backend

./: .env  .gitignore  README.md  build.sh  data.json  pyproject.toml  render.yaml
backend/: settings.py  urls.py
core/: admin.py  choices.py  forms.py  functions.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_last_name_alter_user_middle_name.py  0003_user_updated_at_alter_user_profile_image.py  0004_user_friends_user_theme.py  0005_alter_user_friends.py  0006_user_cover_image.py  0007_friendrequest.py  0008_notification.py  0009_notification_created_at_notification_updated_at_and_more.py  0010_alter_user_theme.py
fixtures/: data.json
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_likes.py  0003_alter_post_likes.py  0004_alter_post_likes.py
