[tool.poetry]
name = "fb-clone-django-backend"
version = "0.1.0"
description = ""
authors = ["Kingsley <kingsleyihemelanduofficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
djangorestframework = "^3.14.0"
django = "^4.1.2"
django-cors-headers = "^3.13.0"
pillow = "^9.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
